IE11 title bar spacing fix

--- a/frontend/scss/molecules/_m-title-bar.scss
+++ b/frontend/scss/molecules/_m-title-bar.scss
@@ -64,6 +64,7 @@
   @include breakpoint('small+') {
     display: flex;
     margin-top: auto;
+    align-self: flex-end;
   }
 }
 
